pane-separator: render the pane separator grip with an SVG asset
Use a background layer instead of C code for it.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -224,9 +224,15 @@ GtkTreeView.separator:backdrop,
     color: @theme_text_color;
 }
 
-.pane-separator,
-.pane-separator:hover {
+.pane-separator {
     background-color: @theme_bg_color;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url("assets/pane-separator-grip.svg");
+}
+
+.pane-separator.vertical {
+    background-image: url("assets/pane-separator-grip-vertical.svg");
 }
 
 .pane-separator:backdrop,
