scale: use a margin to make the trough background/frame thinner
Now that GtkRange supports it.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -623,6 +623,14 @@ GtkScale.slider:insensitive:backdrop {
     /* background-image in -assets variant */
 }
 
+GtkScale.trough {
+    margin: 8px 0;
+}
+
+GtkScale.trough.vertical {
+    margin: 0 8px;
+}
+
 GtkScale.trough,
 GtkScale.trough.highlight,
 GtkScale.trough.vertical,
