infobars: remove custom Nautilus infobar theming
This is not needed anymore with Nautilus master, and the style we apply
for borders for children of the bar can be made generic.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -2511,13 +2511,6 @@ GtkInfoBar .button:active:focus,
 .warning .button:active,
 .warning .button:focus,
 .warning .button:active:focus,
-.question .entry,
-.question .entry:focus,
-.question .button,
-.question .button:insensitive,
-.question .button:active,
-.question .button:focus,
-.question .button:active:focus,
 .error .entry,
 .error .entry:focus,
 .error .button,
@@ -2528,6 +2521,20 @@ GtkInfoBar .button:active:focus,
     border-image: none;
 
     border-color: shade(@borders, 0.9);
+    border-style: solid;
+    border-width: 1px;
+}
+
+.question .entry,
+.question .entry:focus,
+.question .button,
+.question .button:insensitive,
+.question .button:active,
+.question .button:focus,
+.question .button:active:focus {
+    border-image: none;
+
+    border-color: darker(@question_bg_color);
     border-style: solid;
     border-width: 1px;
 }
@@ -2558,7 +2565,6 @@ GtkInfoBar .button:active:backdrop,
     border-style: solid;
     border-width: 1px;
 }
-
 
 .info {
     text-shadow: 0 1px @info_text_shadow;
