osd: make GtkOverlay OSDs automatically transparent
Since that's what they're used for.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -2027,6 +2027,10 @@ GtkCheckButton:selected:focus {
     text-shadow: 0 1px @osd_text_shadow;
 }
 
+GtkOverlay.osd {
+    background-color: transparent;
+}
+
 .osd.toolbar {
     padding: 16px;
     border-style: none;
