floating-bars: specify color and text-shadow
Make sure we don't inherit the wrong values.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -130,6 +130,9 @@ GtkLabel:insensitive {
     background-color: @theme_base_color;
     border-color: @borders;
 
+    color: @theme_text_color;
+    text-shadow: 0 1px @button_text_shadow;
+
     border-radius: 3px;
     border-width: 1px;
     border-style: solid;
