combobox: disable text shadow for combobox menuitems
Since the menu is attached to the combobox, which has a text shadow
himself, we should make sure to remove it from the menu.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1662,9 +1662,8 @@ GtkTreeMenu.menu {
 GtkTreeMenu .menuitem {
     padding: 2px;
 
-    border-style: solid;
-    border-width: 1px 0;
-    border-color: @menu_combobox_border;
+    border-style: none;
+    text-shadow: none;
 }
 
 GtkTreeMenu .menuitem * {
