--- a/themes/a11y-base.css
+++ b/themes/a11y-base.css
@@ -38,6 +38,9 @@
     -GtkComboBox-arrow-scaling: 0.9;
     -GtkButton-default-border: 0;
 
+    -GtkWindow-resize-grip-width: 0;
+    -GtkWindow-resize-grip-height: 0;
+
     background-clip: padding-box;
 }
 
