--- a/themes/Adwaita/gtk-3.0/gtk-main.css
+++ b/themes/Adwaita/gtk-3.0/gtk-main.css
@@ -123,22 +123,22 @@
 @define-color wm_title_highlight_dark alpha(#ffffff, 0.0);
 @define-color wm_title_highlight #ffffff;
 
-@define-color wm_bg_a shade (@bg_color, 1.1);
-@define-color wm_bg_b @bg_color;
+@define-color wm_bg_a shade (@theme_bg_color, 1.1);
+@define-color wm_bg_b @theme_bg_color;
 
-@define-color wm_button_bg_a shade (@bg_color, 1.0);
-@define-color wm_button_bg_b shade (@bg_color, 0.85);
-@define-color wm_button_bg_c shade (@bg_color, 0.8);
-@define-color wm_button_bg_d shade (@bg_color, 0.9);
+@define-color wm_button_bg_a shade (@theme_bg_color, 1.0);
+@define-color wm_button_bg_b shade (@theme_bg_color, 0.85);
+@define-color wm_button_bg_c shade (@theme_bg_color, 0.8);
+@define-color wm_button_bg_d shade (@theme_bg_color, 0.9);
 
 @define-color wm_button_bg_hover_a shade (@wm_button_bg_a, 1.1);
 @define-color wm_button_bg_hover_b shade (@wm_button_bg_b, 1.1);
 @define-color wm_button_bg_hover_c shade (@wm_button_bg_c, 1.1);
 @define-color wm_button_bg_hover_d shade (@wm_button_bg_d, 1.1);
 
-@define-color wm_button_bg_active_a shade (@bg_color, 0.7);
-@define-color wm_button_bg_active_b shade (@bg_color, 0.9);
-@define-color wm_button_bg_active_c shade (@bg_color, 0.9);
+@define-color wm_button_bg_active_a shade (@theme_bg_color, 0.7);
+@define-color wm_button_bg_active_b shade (@theme_bg_color, 0.9);
+@define-color wm_button_bg_active_c shade (@theme_bg_color, 0.9);
 
 @import url("gtk-main-common.css");
 @import url("gtk-widgets-backgrounds.css");
